<resources>
    <string name="app_name">מלצריטו</string>
    <string name="action_sign_in_short">הירשם</string>
    <string name="email">כתובת דואר אלקטרוני</string>
    <string name="minimum_password">סיסמא קצרה מדי, הכנס לפחות 6 תווים</string>
    <string name="auth_failed">זיהוי נכשל, בדוק את כתובת הדואר האלקטרוני שלך והסיסמא או הירשם</string>
    <string name="change_email">שנה כתובת דואר אלקטרוני</string>
    <string name="change_password">שנה סיסמא</string>
    <string name="send_password_reset_email">שלח סיסמא חדשה לכתובת דואר אלקטרוני</string>
    <string name="remove_user">הסר משתמש</string>
    <string name="new_pass">סיסמא חדשה</string>
    <string name="title_activity_login">התחבר</string>
    <string name="hint_email">כתובת דואר אלקטרוני</string>
    <string name="hint_password">סיסמא</string>
    <string name="hint_name">שם מלא</string>
    <string name="btn_login">התחבר</string>
    <string name="btn_link_to_register">לא רשום? הירשם עכשיו!</string>
    <string name="btn_link_to_login">כבר רשום. הכנס אותי!</string>
    <string name="title_activity_reset_password">איפוס סיסמא</string>
    <string name="btn_forgot_password">שכחת סיסמא?</string>
    <string name="btn_reset_password">איפוס סיסמא</string>
    <string name="btn_back"><![CDATA[<< חזור]]></string>
    <string name="hint_new_email">כתובת דואר אלקטרוני חדש</string>
    <string name="btn_change">החלף</string>
    <string name="btn_send">שלח</string>
    <string name="btn_remove">הסר</string>
    <string name="btn_sign_out">התנתק</string>
    <string name="lbl_forgot_password">שכחת סיסמא?</string>
    <string name="forgot_password_msg">אנו צריכים את כתובת הדואר האלקטרוני שלך על מנת לשלוח לך סיסמא חדשה.</string>
    <string name="btn_chefs">טבחים</string>
    <string name="btn_waiters">מלצרים</string>
    <string name="title_fragment_tables">שולחנות</string>
    <string name="title_fragment_openorders">הזמנות פתוחות</string>
    <string name="title_fragment_club">מועדון לקוחות</string>
    <string name="title_update_stocks">עדכון חוסרים</string>

    <string name="title_fragment_add_new_club_member">הוספת חבר מועדון</string>
    <string name="title_fragment_search_club_member">חיפוש חבר מועדון</string>
    <string name="title_fragment_table_total_order">ההזמנות של השולחן</string>
    <string name="title_fragment_menu">תפריט</string>
    <string name="title_fragment_add_new_special">הוספת ספיישל לתפריט</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="club_member_search_btn">חפש לקוח</string>
    <string name="add_new_club_member_btn">הוסף לקוח חדש</string>
    <string name="club_member_id">תעודת זהות</string>
    <string name="club_member_name">שם לקוח</string>
    <string name="club_member_birthday">תאריך לידה</string>
    <string name="club_member_address">כתובת</string>
    <string name="club_member_phone">טלפון</string>
    <string name="waiter_chef_activity">מלצר/טבח</string>
    <string name="deserts_btn">קינוחים</string>
    <string name="drinks_btn">שתייה</string>
    <string name="specials_btn">ספיישלים</string>
    <string name="side_dishes_btn">תוספות</string>
    <string name="main_course_btn">מנות עיקריות</string>
    <string name="appetizers_btn">מנות ראשונות</string>
    <string name="special_name">שם המנה</string>
    <string name="secular_font">fonts/SecularOne-Regular.ttf</string>
    <integer name="ready">3</integer>
    <integer name="onprep">2</integer>
    <integer name="notready">1</integer>
    <string name="order_num">מספר הזמנה: </string>
    <string name="table_num"> מספר שולחן:  </string>
    <string name="new_order">הזמנה חדשה</string>

    <string name="items_in_order"> פריטים בהזמנה:  </string>
    <string name="ready_button_text"> מוכן  </string>
    <string name="new_special_added_ntf">  ספיישל חדש נוסף לתפריט  </string>

    <integer name="appetizers_menu">1</integer>
    <integer name="main_course_menu">2</integer>
    <integer name="side_dishes_menu">3</integer>
    <integer name="specials_menu">4</integer>
    <integer name="drinks_menu">5</integer>
    <integer name="deserts_menu">6</integer>





</resources>
