<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/tables"
            android:icon="@drawable/table"
            android:title="@string/title_fragment_tables" />
        <item
            android:id="@+id/open_orders"
            android:icon="@drawable/openorders"
            android:title="@string/title_fragment_openorders" />
        <item
            android:id="@+id/club"
            android:icon="@drawable/club"
            android:title="@string/title_fragment_club" />
        <item
            android:id="@+id/choose_employee_role"
            android:icon="@drawable/pick"
            android:title="@string/waiter_chef_activity" />

        <item
            android:id="@+id/logout_menu"
            android:icon="@drawable/logout"
            android:title="@string/btn_sign_out" />
    </group>



</menu>
