<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context="sapir_liran.melzarito.UI.ChooseEmployeeRoleActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        >
    <Button
        android:id="@+id/waitersButton"
        style="?android:textAppearanceSmall"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_waiters"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:fontFamily="v"
        android:layout_gravity="center"
        android:drawableTop="@drawable/waiter"
        android:paddingTop="20sp"
        android:layout_marginLeft="40sp"
        />

    <Button
        android:id="@+id/chefsButton"
        style="?android:textAppearanceSmall"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_chefs"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:drawableTop="@drawable/chef"
        android:paddingTop="20sp"
        />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        >
    <Button
        android:id="@+id/logout"
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_out"
        android:textColor="#e9343a"
        android:background="@drawable/buttonshape"
        android:paddingLeft="40sp"
        android:paddingRight="30sp"
        android:drawableRight="@drawable/logout"/>
    </LinearLayout>
</LinearLayout>

